changed card and nav slightly, also updated css

--- a/templates/base.html
+++ b/templates/base.html
@@ -315,7 +315,7 @@
                     {# bruker-dropdown #}
                     <li class="nav-item mr-1 dropdown">
                         <a href="#bruker " class="nav-link dropdown-toggle text-light" data-toggle="dropdown" id="navbarDropdown3" role="button"  aria-haspopup="true" aria-expanded="false">
-                            <span class="fas fa-user"></span>
+{#                            <span class="fas fa-user"></span>#}
                             {% firstof user.get_full_name user.username %}
                             <span class="caret"></span>
                         </a>
