--- a/templates/includes/upcoming_events.html
+++ b/templates/includes/upcoming_events.html
@@ -45,7 +45,7 @@
                 </time>
             </div>
         </div>
-        <div class="list-group list-group-flush border-bottom border-top">
+        <div class="list-group list-group-flush border-top">
             {% for event in upcoming %}
                 {% if forloop.first %}
                 {% else %}
