reordered some of the card on front page and updated colors

--- a/nablapps/officeCalendar/templates/officeCalendar/includes/list.html
+++ b/nablapps/officeCalendar/templates/officeCalendar/includes/list.html
@@ -46,7 +46,7 @@ office_events is a dictionary with weekday as key and a list of events as value
         </style>
     {% endaddtoblock %}
 
-    <div class="card flex-grow-1 card-body-overline " style="border-color:var(--nabla-blue-alt);word-wrap: normal">
+    <div class="card border border-nabla-blue flex-grow-1 card-body-overline " style="word-wrap: normal">
         <table id="office_calendar" >
             <col width="20%">
             <col width="55%">
