--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -12,14 +12,32 @@
 
 {% block main-blank %}
     {% addtoblock "css" %}
-        <link rel="stylesheet" href="{% static "css/front_page.css" %}?version=1.2.2">
+        <link rel="stylesheet" href="{% static "css/front_page.css" %}?version=1.2.3">
     {% endaddtoblock %}
-    <div class="maingrid-container{% if not newuser_message %}-authenticated{% endif %}">
+    <div class="maingrid-container{% if logged_in %}-authenticated{% endif %}">
         <!--main grid container open tag-->
         <!--main content begin-->
 
         {# Main article #}
         {% include "includes/info_card.html" with content=main_news class="main-article" header_size="h1" %}
+
+        {# Social buttons #}
+        <div class="social card card-body card-body-overline">
+            <a href="mailto:bedriftskontakt@nabla.no" class="btn btn-nabla-blue">
+                Bedriftsforslag - send en mail til BN
+            </a>
+            <p></p>
+            <a href="{% url "gullkorn" %}" class="btn btn-nabla-yellow">
+                Lyst til å melde inn et gullkorn eller sitat?
+            </a>
+            <p></p>
+            {% if logged_in %}
+                <a href="{% url "poll_user_create" %}" class="btn btn-nabla-blue">
+                    Lag en bukeravstemning
+                </a>
+            {% endif %}
+
+        </div>
 
         {# Upcoming events and bedpres #}
         {% include "includes/upcoming_events.html" with upcoming=upcoming_events class="upcoming-events-1" %}
@@ -27,45 +45,38 @@
 
         <!--Kontoret-->
         <div class="office d-flex flex-column">
-            <h5 class="nabla-frontpage-header" >
+            <h5 class="nabla-frontpage-header">
                 Kontoret denne uka
             </h5>
             {% include "officeCalendar/includes/list.html" %}
         </div>
-        <!-- Front page news -->
-        {% for news in news_list %}
-            {% include "includes/info_card.html" with content=news class="news more-news-" number=forloop.counter %}
-        {% endfor %}{# news_list #}
-
-        <button onclick="location.href='{% url "news_list" %}'" type="button"
-                class="more-news-btn btn btn-nabla-blue btn-block">Flere nyheter
-        </button>
 
         <div class="latest-nablad d-flex flex-column">
             <h5 class="nabla-frontpage-header">
                 Siste Nablad
             </h5>
-        <div class="flex-grow-1 card card-body card-body-overline">
-            <!--Siste Nablad-->
-            {% if new_nablad %}
-                <div class="text-center">
-{#                    <h3><a class="text-dark" href="{% url "nablad_list" %}">Siste Nablad</a></h3>#}
-                    <div class="row text-center">
+            <div class="flex-grow-1 card card-body card-body-overline">
+                <!--Siste Nablad-->
+                {% if new_nablad %}
+                    <div class="text-center">
+                        {#                    <h3><a class="text-dark" href="{% url "nablad_list" %}">Siste Nablad</a></h3>#}
+                        <div class="row text-center">
 
-                        {# This should be revritten #}
-                        {% for nablad in new_nablad %}
-                            <div class="col-md-12{% if not forloop.first %} d-none d-md-block {% endif %}">
-                                <a href="{{ nablad.get_absolute_url }}">
-                                    <img class="rounded mw-100 nabla-media-img" src="{% thumbnail nablad.thumbnail 300x770 upscale=True detail=True quality=95 detail %}">
-                                </a>
-                            </div>
-                        {% endfor %}
+                            {# This should be revritten #}
+                            {% for nablad in new_nablad %}
+                                <div class="col-md-12{% if not forloop.first %} d-none d-md-block {% endif %}">
+                                    <a href="{{ nablad.get_absolute_url }}">
+                                        <img class="rounded mw-100 nabla-media-img"
+                                             src="{% thumbnail nablad.thumbnail 300x770 upscale=True detail=True quality=95 detail %}">
+                                    </a>
+                                </div>
+                            {% endfor %}
+                        </div>
                     </div>
-                </div>
-            {% else %}
-                <h1>Siste utgave av Nabladet</h1>
-                <h4>...vil dukke opp her når det kommer!</h4>
-            {% endif %}
+                {% else %}
+                    <h1>Siste utgave av Nabladet</h1>
+                    <h4>...vil dukke opp her når det kommer!</h4>
+                {% endif %}
             </div>
         </div>
 
@@ -73,7 +84,7 @@
         <!--Sidebar begin-->
         {% if newuser_message %}
             <div class="welcome card card-body card-body-overline ">
-                <h1 class="text-nabla">Velkommen til Nabla</h1>
+                <h1 class="text-nabla-blue">Velkommen til Nabla</h1>
                 <p>
                     Nabla er linjeforeningen for studenter ved sivilingeniørstudiet Fysikk og Matematikk ved NTNU, og
                     har
@@ -82,12 +93,12 @@
                     arrangerer Nabla et mangfold av ulike arrangementer, og har 25 ulike undergrupper som studentene kan
                     engasjere seg i.
                 </p>
-                <h4 class="text-nabla">Ny student?</h4>
+                <h4 class="text-nabla-blue">Ny student?</h4>
                 <p>
                     Følg oss på <a href="https://www.instagram.com/nablalinjeforening/">instagram</a> da vel!<br>
                     Les vår informasjon for nye studenter <a href="/nystudent/">her</a>.
                 </p>
-                <h4 class="text-nabla">Bedrift?</h4>
+                <h4 class="text-nabla-blue">Bedrift?</h4>
                 <p>
                     Sjekk ut <a href="/bedriftskontakten/">bedriftskontakten sine sider</a>, eller ta kontakt med
                     bedriftskontakten på <a href="mailto:bedkom@nabla.no">bedkom@nabla.no</a>.
@@ -99,13 +110,6 @@
             {% include "poll/poll_include.html" %}
         </div>
 
-        <div class="social card card-body card-body-overline">
-            <a href="mailto:bedriftskontakt@nabla.no" class="btn btn-nabla-blue" >Bedriftsforslag - send en mail til BN</a>
-            <p></p>
-            <a href="/contact/gullkorn/" class="btn btn-nabla-yellow" >Lyst til å melde inn et gullkorn eller sitat?</a>
-            <p></p>
-            <a href="https://nabla.no/wiki/" class="btn btn-nabla-blue">Nablawiki</a>
-        </div>
 
         <div class="latest-podcast d-flex flex-column">
             <h5 class="nabla-frontpage-header">
@@ -117,7 +121,8 @@
                     <div class="d-flex flex-column text-center">
                         {#                    <h3><a class="text-dark" href="{% url "season_view" %}">Siste Skråttcast</a></h3>#}
                         <a href="{{ new_podcast.get_absolute_url }}">
-                            <img class="rounded mw-100 nabla-media-img" src="{{ new_podcast.image.url }}" alt="{{ new_podcast.title }}"
+                            <img class="rounded mw-100 nabla-media-img" src="{{ new_podcast.image.url }}"
+                                 alt="{{ new_podcast.title }}"
                             />
                         </a>
                     </div>
@@ -127,6 +132,15 @@
                 {% endif %}
             </div>
         </div>
+
+        <!-- Front page news -->
+        {% for news in news_list %}
+            {% include "includes/info_card.html" with content=news class="news more-news-" number=forloop.counter %}
+        {% endfor %}{# news_list #}
+
+        <button onclick="location.href='{% url "news_list" %}'" type="button"
+                class="more-news-btn btn btn-nabla-blue btn-block">Flere nyheter
+        </button>
 
         <div class="sponsors card card-body card-body-overline justify-content-center">
             <!--Sponsorer-->
