--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -33,7 +33,7 @@
             <p></p>
             {% if logged_in %}
                 <a href="{% url "poll_user_create" %}" class="btn btn-nabla-blue">
-                    Lag en bukeravstemning
+                    Lag en brukeravstemning
                 </a>
             {% endif %}
 
