--- a/templates/base.html
+++ b/templates/base.html
@@ -482,7 +482,7 @@
                 <h2>Tilbakemelding</h2>
                     <p>
                     Har du funnet en feil, får du ikke logget på, eller er det noe som burde forbedres? <br>
-                    Fyll ut <a href="/contact/feedback/">tilbakemeldingskjema</a> eller kontakt webkom:<br>
+                    Fyll ut <a href="{% url "feedback" %}">tilbakemeldingskjema</a> eller kontakt webkom:<br>
                     <a class="email" href="mailto:webkom@nabla.no">webkom@nabla.no</a>
                     </p>
                 </div>
