--- a/nablapps/news/templates/news/news_list.html
+++ b/nablapps/news/templates/news/news_list.html
@@ -52,7 +52,7 @@
 
 <div class="news-list">
 {% for news in news_list %}
-{% include "includes/article_widget.html" with number=forloop.counter margin="mb-3"%}
+            {% include "includes/info_card.html" with content=news class="news mb-3 more-news-" number=forloop.counter %}
 {% endfor %}
 </div>
 {% include "includes/pagination.html" %}
