--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -23,17 +23,25 @@
 
         {# Social buttons #}
         <div class="social card card-body card-body-overline">
-            <a href="mailto:bedriftskontakt@nabla.no" class="btn btn-nabla-blue">
+            <a href="mailto:bedriftskontakt@nabla.no" class="btn btn-nabla-yellow">
                 Bedriftsforslag - send en mail til BN
             </a>
             <p></p>
-            <a href="{% url "gullkorn" %}" class="btn btn-nabla-yellow">
+            <a href="{% url "gullkorn" %}" class="btn btn-nabla-yellow-dark">
                 Lyst til å melde inn et gullkorn eller sitat?
             </a>
             <p></p>
             {% if logged_in %}
-                <a href="{% url "poll_user_create" %}" class="btn btn-nabla-blue">
+                <a href="{% url "poll_user_create" %}" class="btn btn-nabla-blue-light">
                     Lag en brukeravstemning
+                </a>
+                <p></p>
+                <a href="{% url "feedback" %}" class="btn btn-nabla-blue">
+                    Send inn forslag til endring av nettsiden
+                </a>
+                <p></p>
+                <a href="{% url "intern_page" %}" class="btn btn-nabla-blue-dark">
+                    Internside
                 </a>
             {% endif %}
 
