Hide preference vote when voted

--- a/nablapps/vote/templates/vote/voting_event_user_view.html
+++ b/nablapps/vote/templates/vote/voting_event_user_view.html
@@ -83,16 +83,21 @@
                 <span v-else><i class="fas fa-square"></i></span>
             </span>
             <!-- [[ The $parent.$parent is a bit ugly, but if it works it works. It is to mitigate the transition ]]  -->
-            <priority-select
-                v-if="vote.is_preference"
-                :options="vote.alternatives"
-                @submit-vote="submitVote"
-            ></priority-select>
-            <radio-select
-                v-else
-                :vote="vote"
-                @submit-vote="submitVote"
-            ></radio-select>
+            <template v-if="!vote.has_voted">
+                <priority-select
+                    v-if="vote.is_preference"
+                    :options="vote.alternatives"
+                    @submit-vote="submitVote"
+                ></priority-select>
+                <radio-select
+                    v-else
+                    :vote="vote"
+                    @submit-vote="submitVote"
+                ></radio-select>
+            </template>
+            <div v-else>
+                <i>Stemme sendt inn</i>
+            </div>
         </div>
     </template>
     <template id="pri-select-template">
@@ -164,7 +169,7 @@
              }
          },
          template: `
-            <form v-if="!vote.has_voted" @submit.prevent="$emit('submitVote', {alternative_pk: this.selected_alternative})">
+            <form @submit.prevent="$emit('submitVote', {alternative_pk: this.selected_alternative})">
                 <span class="voting_item__results">
                     <div v-for="alternative in vote.alternatives" class="form-check">
                         <input type="radio" :name="vote.pk + '_alternatives'" :value="alternative.pk" :id="vote.pk + '_alternative_' + alternative.pk" class="form-check-input" v-model="selected_alternative">
@@ -173,10 +178,6 @@
                 </span>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
-
-            <div v-else>
-                <i>Stemme sendt inn</i>
-            </div>
          `,
      }
 
